--- a/product.html
+++ b/product.html
@@ -5,7 +5,7 @@
 <meta name=viewport content="width=device-width,initial-scale=1">
 <title>Truder Packaging</title>
 <link rel=stylesheet href=styles.css>
-<link rel="canonical" href="https://https://harsh-bulsara.github.io/truder-packaging-industries/product.html/">
+<link rel="canonical" href="https://https://harsh-bulsara.github.io/products/">
 <meta name="robots" content="index, follow">
 </head>
 <script>document.addEventListener("DOMContentLoaded",(function(){const e=document.getElementById("mobile-menu"),t=document.querySelector(".nav-list");e.addEventListener("click",(function(){t.classList.toggle("active")})),document.querySelectorAll(".nav-list a").forEach((e=>{e.addEventListener("click",(function(){t.classList.remove("active")}))}))}))</script>
