--- a/aboutUs.html
+++ b/aboutUs.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Truder Packaging</title>
     <link rel="stylesheet" href="styles.css"> <!-- Apply main styles -->
+    <link rel="canonical" href="https://https://harsh-bulsara.github.io/products/">
+    <meta name="robots" content="index, follow">
 </head>
 <script>
     document.addEventListener("DOMContentLoaded", function () {
