--- a/product.html
+++ b/product.html
@@ -3,7 +3,9 @@
 <head>
 <meta charset=UTF-8>
 <meta name=viewport content="width=device-width,initial-scale=1">
-<title>Truder Packaging</title>
+<title>Explore Premium Products | Truder Packaging Product Showcase</title>
+<meta name="description" content="Truder Packaging is a leading manufacturer of plastic packaging products, offering a wide range of eco-friendly and customizable solutions for businesses and individuals.">
+<meta name="keywords" content="packaging, plastic packaging, eco-friendly packaging, packaging products, packaging solutions">
 <link rel=stylesheet href=styles.css>
 <link rel="canonical" href="https://harsh-bulsara.github.io/products/product.html">
 <meta name="robots" content="index, follow">
